<resources>
    <string name="app_name">Films Info</string>
    <string name="poster_of_movie">Movie poster</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="name">Name:</string>
    <string name="originalTitle">Original Name</string>
    <string name="textview">TextView</string>
    <string name="Rating">Rating</string>
    <string name="releaseDate">Release date</string>
    <string name="overview">Overview</string>
    <string name="addFavorite">" img Button star add to favorite"</string>
    <string name="bigPoster">Big movie poster</string>
    <string name="add_film_favourite">Movie added to favorites</string>
    <string name="delete_failm_from_favourite">Movie deleted from favorites</string>
    <string name="menu_main">Main</string>
    <string name="menu_favourite">Favorites</string>
    <string name="start_trailer">Start trailer</string>

</resources>